# pyopticon

./: .gitignore  README.md  deribit_option_valuation_eth.ipynb  deribit_query_eth.ipynb  example.ipynb  historical_data.ipynb  pyproject.toml  test.csv
optionlib/: __init__.py  floating_quantile.py  menus.py  options.py
optionlib/data/: __init__.py  prices.py  ticker.py
src/optionlib/: __init__.py  black_scholes.py  floating_quantile.py  menus.py  model.py
src/optionlib/data/: __init__.py  prices.py  ticker.py
src/pyopticon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyopticon/data/: earnings.py
tests/: unit_tests.py
